[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/titlescreen/burden_underground.png" type="Texture" id=1]
[ext_resource path="res://Menu/titlescreen/Buttons/NewGameButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/titlescreen/Buttons/ContinueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/titlescreen/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/on-click_sound.wav" type="AudioStream" id=5]
[ext_resource path="res://Menu/fade_in/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/titlescreen/title_screen.gd" type="Script" id=7]
[ext_resource path="res://Menu/titlescreen/background.png" type="Texture" id=8]
[ext_resource path="res://sounds/main-menu_soundtrack.ogg" type="AudioStream" id=9]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EcranMenu" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 80.0
margin_right = 924.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 824.0
margin_bottom = 120.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 124.0
margin_right = 824.0
margin_bottom = 440.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 824.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 48.0
margin_right = 824.0
margin_bottom = 108.0
scene_to_load = "res://map.tscn"

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 128.0
margin_right = 824.0
margin_bottom = 188.0

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 208.0
margin_right = 824.0
margin_bottom = 268.0
scene_to_load = ""

[node name="ButtonSound" type="AudioStreamPlayer" parent="Menu/CenterRow"]
stream = ExtResource( 5 )

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 511, 300 )
current = true

[node name="MainMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -22.214
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
